WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241600
File size label for attachment in mail compose shows up black instead of expected grey
https://bugs.webkit.org/show_bug.cgi?id=241600
Summary
File size label for attachment in mail compose shows up black instead of expe...
Kate Cheney
Reported
2022-06-14 09:41:33 PDT
File size label for attachment in mail compose shows up black instead of expected grey
Attachments
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2022-06-14 09:41:44 PDT
rdar://94071484
Kate Cheney
Comment 2
2022-06-14 09:46:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1504
EWS
Comment 3
2022-06-16 12:33:57 PDT
Committed
r295604
(
251609@main
): <
https://commits.webkit.org/251609@main
> Reviewed commits have been landed. Closing PR #1504 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug