File size label for attachment in mail compose shows up black instead of expected grey https://bugs.webkit.org/show_bug.cgi?id=241600 rdar://94071484

Reviewed by Cameron McCormack.

As of https://trac.webkit.org/changeset/293867/webkit in DrawGlyphsRecorder
specifically, we use the fill color of the initial state of GraphicsContext
in the case where the new fill color we are updating to is equal to the existing
fill color for perf reasons. This revealed a bug where CGContext state gets
out of sync with it's wrapping GraphicsContext, causing an incorrect
initial state fill color and thus painting the second line of Mail
attachments in the wrong color.

This patch fixes this bug by saving and restoring the state of
m_internalContext, which we reference in the case above to determine
whether to update the fill color.

* Source/WebCore/platform/graphics/coretext/DrawGlyphsRecorderCoreText.cpp:
(WebCore::DrawGlyphsRecorder::drawNativeText):

Canonical link: https://commits.webkit.org/251609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295604 268f45cc-cd09-0410-ab3c-d52691b4dbfc